--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,11 +29,7 @@
 
   <div class="sidebar-item">
     <p>
-      Hi. I'm Changhyeon Nam, interested in python, nlp, ps. I keep studying to become an expert.
-    </p>
-    <p class="social-icons">
-      <a href="https://www.linkedin.com/in/changhyeon-nam-9306a616b/"><i class="fab fa-linkedin-in fa-2x"></i></a>
-      <a href="https://github.com/changhyeonnam"><i class="fab fa-github fa-2x"></i></a>
+      Notes and codes for Matrix Methods In Data Analysis, Signal Processing, And Machine Learning.
     </p>
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
